--- a/maxmem/maxmem.vcxproj.filters
+++ b/maxmem/maxmem.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="2.cpp">
+    <ClCompile Include="maxmem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
